# ADtune

./: .gitignore  Cargo.toml  LICENSE  NOTICE  README.md  ROADMAP.md  install.sh
.cargo/: config.toml
crates/adtune-apo/: Cargo.toml  build.rs
crates/adtune-apo/src/: apo.rs  lib.rs  processor.rs
crates/adtune-cli/: Cargo.toml
crates/adtune-cli/src/: main.rs
crates/adtune-core/: Cargo.toml
crates/adtune-core/fuzz/: Cargo.toml  README.md
crates/adtune-core/fuzz/fuzz_targets/: parametric_eq.rs  profile_json.rs
crates/adtune-core/fuzz/seeds/parametric_eq/: highshelf.txt  nan.txt  valid.txt
crates/adtune-core/fuzz/seeds/profile_json/: hostile.json  valid.json
crates/adtune-core/src/: catalog.rs  dsp.rs  lib.rs  parametric_eq.rs  profile.rs  state.rs  store.rs
crates/adtune-core/tests/: parity.rs
crates/adtune-pipewire/: Cargo.toml
crates/adtune-pipewire/examples/: backend.rs  native-probe.rs
crates/adtune-pipewire/src/: conn.rs  ipc.rs  lib.rs  module_host.rs  paths.rs  portal.rs  registry.rs  render.rs  state.rs
crates/adtune-ui/: Cargo.toml  build.rs
crates/adtune-ui/src/: graph.rs  main.rs  sys.rs
crates/adtune-ui/ui/: app.slint
crates/adtune-windows/: Cargo.toml
crates/adtune-windows/src/: devices.rs  elevate.rs  env.rs  lib.rs  native.rs  register.rs  state.rs  writer.rs
docs/: snap-autoconnect-request.md
packaging/linux/: README.md  adtune-service.desktop.in  adtune.desktop.in  build-deb.sh  io.github.anidedej.ADtune.metainfo.xml.in
packaging/windows/: README.md  adtune.iss  build-installer.ps1  sign-apo.ps1
snap/: snapcraft.yaml
