[package]
name = "adtune-core-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

# Detached from the parent workspace: the fuzz crate depends on libfuzzer-sys
# (nightly + a sanitizer runtime), so it must not be built by a normal
# `cargo build --workspace` on stable.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.adtune-core]
path = ".."

# Fuzzers are always built optimized with debug assertions on, so an overflow or
# a broken invariant surfaces as a crash the fuzzer can record.
[profile.release]
debug = true
debug-assertions = true
overflow-checks = true

[[bin]]
name = "parametric_eq"
path = "fuzz_targets/parametric_eq.rs"
test = false
doc = false
bench = false

[[bin]]
name = "profile_json"
path = "fuzz_targets/profile_json.rs"
test = false
doc = false
bench = false
